# fractal-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
fractal-lib/: Cargo.toml
fractal-lib/src/: color.rs  geometry.rs  lib.rs  lindenmayer.rs  macros.rs  turtle.rs
fractal-lib/src/chaosgame/: barnsleyfern.rs  mod.rs  sierpinski.rs
fractal-lib/src/curves/: cesaro.rs  cesarotri.rs  dragon.rs  kochcurve.rs  levyccurve.rs  mod.rs  terdragon.rs
fractal-lib/src/escapetime/: burningship.rs  mandelbrot.rs  mod.rs
fractal-piston/: Cargo.toml  test_manual.sh
fractal-piston/src/: fractaldata.rs  main.rs  work_multiplexer.rs
fractal-piston/src/chaosgame/: mod.rs
fractal-piston/src/curves/: cesarotri.rs
fractal-piston/src/escapetime/: mod.rs
fractal-piston/src/pistonrendering/: chaosgame.rs  escapetime.rs  mod.rs  turtle.rs
fractal-piston/tests/: cli_tests.rs
fractal-piston/tests/cmd/: dragon.trycmd  toplevel.trycmd
fractal-ui/: Cargo.toml
fractal-ui/src/: lib.rs
fractal-ui/src/curves/: levyccurve.rs
fractal-ui/src/pistonrendering/: escapetime.rs
fractal-wasm/: .eslintrc.json  Cargo.toml  index.html  index.js  package.json  webpack.config.js
fractal-wasm/js/: index.js
fractal-wasm/src/: chaosgame.rs  escapetime.rs  fractaldata.rs  lib.rs  turtle.rs
fractal-wasm/static/: index.html
fractal-wasm/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
src/: cesaro.rs  cesarotri.rs  color.rs  common.rs  dragon.rs  fractaldata.rs  geometry.rs  glwindow.rs  kochcurve.rs  levyccurve.rs  lib.rs  lindenmayer.rs  macros.rs  main.rs  terdragon.rs  turtle.rs  work_multiplexer.rs
src/chaosgame/: barnsleyfern.rs  mod.rs  sierpinski.rs
src/curves/: cesaro.rs  cesarotri.rs  dragon.rs  kochcurve.rs  levyccurve.rs  mod.rs  terdragon.rs
src/escapetime/: burningship.rs  mandelbrot.rs  mod.rs
src/pistonrendering/: chaosgame.rs  escapetime.rs  mod.rs  turtle.rs
