[package]
name = "fractal"
version = "0.0.1"
authors = ["William (B.J.) Snow Orvis <aetherknight@gmail.com>"]
description = "Fractal rendering program"


[[bin]]
name = "fractal"
doc = false

[dependencies]
clap = "2"
gfx_device_gl = "~0.11"
image = "~0.10"
num = "^0.1"
piston = "^0.26.0"
piston2d-graphics = "^0.18.0"
piston_window = "0.56.0"
rand = "^0.3"
rustc-serialize = "^0.3"
time = "~0.1"

#[dev-dependencies]
#float-cmp = "~0.2.1"
