[package]
name = "fractal-lib"
version = "0.0.1"
authors = ["William (B.J.) Snow Orvis <aetherknight@gmail.com>"]
license = "Apache-2.0"
description = "Fractal library"
edition = "2021"

[dependencies]
log = "^0.4"
num = "^0.4"
# rand/getrandom's supported wasm runtime is configurable by the caller. see
# https://docs.rs/getrandom/latest/getrandom/#webassembly-support
rand = "^0.8"
strum = "^0.25"
strum_macros = "^0.25"
