[package]
name = "fractal-piston"
version = "0.0.1"
authors = ["William (B.J.) Snow Orvis <aetherknight@gmail.com>"]
license = "Apache-2.0"
description = "Fractal rendering program"
edition = "2018"

[[bin]]
name = "fractal-piston"
doc = false

[dependencies]
# Shared, but used by fractal-piston
log = "^0.4"
num = "^0.2"
strum = "0.19"
strum_macros = "0.19"
# fractal-piston-specific
clap = "^2.33"
fractal-lib = { path = "../fractal-lib" }
gfx_device_gl = "^0.16.2"  # needs to match piston_window/dependencies
image = "~0.23.0"  # needs to match piston_window/dependencies
num_cpus = "^1.9"
piston = "^0.52.0"  # needs to match piston_window/dependencies
piston2d-graphics = "^0.37.0"  # needs to match piston_window/dependencies
piston_window = "0.113.0"
simple_logger = "^1.6"
time = "~0.2"
