[package]
name = "fractal-piston"
version = "0.0.1"
authors = ["William (B.J.) Snow Orvis <aetherknight@gmail.com>"]
license = "Apache-2.0"
description = "Fractal rendering program"
edition = "2021"

[[bin]]
name = "fractal-piston"
doc = false

[dependencies]
# Shared, but used by fractal-piston
log = "^0.4"
num = "^0.4"
strum = "^0.25"
strum_macros = "^0.25"
# fractal-piston-specific
clap = "^4.3.24"
fractal-lib = { path = "../fractal-lib" }
gfx_device_gl = "^0.16.2"  # needs to match piston_window/dependencies
image = "~0.24.1"  # needs to match piston_window/dependencies
num_cpus = "^1.9"
piston = "^0.53.0"  # needs to match piston_window/dependencies
piston2d-graphics = "^0.43.0"  # needs to match piston_window/dependencies
piston_window = "0.128.0"
simple_logger = "^4.2"
time = { version = "~0.3", features = ["local-offset"] }

[dev-dependencies]
trycmd = "^0.14.16"
