[package]
name = "fractal"
version = "0.0.1"
authors = ["William (B.J.) Snow Orvis <aetherknight@gmail.com>"]
description = "Fractal rendering program"
edition = "2018"


[[bin]]
name = "fractal"
doc = false

[dependencies]
clap = "2"
gfx_device_gl = "^0.15.5"
image = "~0.20.1"  # needs to match piston_window/dependencies
num = "^0.2"
num_cpus = "^1.9"
piston = "^0.39.0"
piston2d-graphics = "^0.28.0"
piston_window = "0.85.0"
rand = "^0.6"
rustc-serialize = "^0.3"
time = "~0.1"

#[dev-dependencies]
#float-cmp = "~0.2.1"
