[package]
name = "fractal-wasm"
version = "0.0.1"
authors = ["William (B.J.) Snow Orvis <aetherknight@gmail.com>"]
license = "Apache-2.0"
description = "Fractal rendering program, targeting webassembly"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
# Shared, but used by fractal-wasm
log = "^0.4"
num = "^0.2"
strum = "^0.25"
strum_macros = "^0.25"
# fractal-wasm-specific
console_error_panic_hook = "0.1.6"
console_log = { version = "^0.2", features = ["color"] }
fractal-lib = { path = "../fractal-lib"}
js-sys = "^0.3.61"
seed = "0.10.0"
wasm-bindgen = "^0.2.84"
web-sys = {version = "^0.3.61", features = ['CanvasRenderingContext2d', 'HtmlCanvasElement', 'ImageData']}

# enable getrandom's WASM support for browser
getrandom = {version = "0.2", features = ["js"]}
